Fixed horizontal scroll

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,6 +100,12 @@ html, body, #map {
   /* height: 400px; */
 }
 
+.carousel-control-prev-icon,
+.carousel-control-next-icon,
+.carousel-indicators li {
+  filter: drop-shadow(-2px 0px 2px rgba(0,0,0,0.3));
+}
+
 .leaflet-top > .navigate-button {
   width: 100px;
   height: 100px;
